--- a/res/layout/album_grid_item.xml
+++ b/res/layout/album_grid_item.xml
@@ -30,4 +30,10 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:text="Slideshow" />
+    <Button android:id="@+id/btnAlbum"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@id/btnSlideshow"
+            android:text="Edit" />
 </RelativeLayout>
