--- a/res/layout/activity_albums.xml
+++ b/res/layout/activity_albums.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <GridView xmlns:android="http://schemas.android.com/apk/res/android"
           android:id="@+id/grid_view"
-          android:layout_width="fill_parent"
-          android:layout_height="fill_parent"
-          android:numColumns="auto_fit"
-          android:gravity="center"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:verticalSpacing="10dp"
+          android:horizontalSpacing="10dp"
+          android:numColumns="3"
           android:stretchMode="columnWidth"
           android:background="#330033">
 </GridView>
