--- a/res/layout/activity_album.xml
+++ b/res/layout/activity_album.xml
@@ -3,8 +3,9 @@
           android:id="@+id/grid_view"
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
+          android:background="#000000"
+
+          android:columnWidth="60dp"
           android:numColumns="auto_fit"
-          android:gravity="center"
-          android:stretchMode="columnWidth"
-          android:background="#000000">
+>
 </GridView>
