--- a/res/layout/image_grid_item.xml
+++ b/res/layout/image_grid_item.xml
@@ -8,6 +8,6 @@
             android:id="@+id/image_grid_item_image"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="fitCenter"
+            android:scaleType="centerCrop"
     />
 </FrameLayout>
