--- a/res/layout/image_grid_item.xml
+++ b/res/layout/image_grid_item.xml
@@ -4,7 +4,7 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent">
 
-    <ImageView
+    <asbridge.me.uk.MPhoto.Classes.SquareImageView
             android:id="@+id/image_grid_item_image"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
