--- a/res/layout/activity_album.xml
+++ b/res/layout/activity_album.xml
@@ -1,11 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridView xmlns:android="http://schemas.android.com/apk/res/android"
-          android:id="@+id/grid_view"
-          android:layout_width="fill_parent"
-          android:layout_height="fill_parent"
-          android:background="#000000"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent">
 
-          android:columnWidth="60dp"
-          android:numColumns="auto_fit"
->
-</GridView>
+    <Button android:id="@+id/btnSelect"
+            android:layout_width="wrap_content" android:layout_height="wrap_content"
+            android:text="Select"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:minWidth="200px" />
+    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
+              android:id="@+id/grid_view"
+              android:layout_width="fill_parent"
+              android:layout_height="fill_parent"
+              android:background="#000111"
+
+              android:columnWidth="60dp"
+              android:numColumns="auto_fit"
+              android:layout_above="@id/btnSelect"
+    >
+    </GridView>
+</RelativeLayout>
