--- a/res/layout/image_grid_item.xml
+++ b/res/layout/image_grid_item.xml
@@ -4,10 +4,15 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent">
 
+
     <asbridge.me.uk.MPhoto.Classes.SquareImageView
             android:id="@+id/image_grid_item_image"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
     />
+    <CheckBox android:id="@+id/imageCheckBox"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_gravity="center" />
 </FrameLayout>
