Added slideshow button in album activity (but it isn't working)

--- a/res/layout/activity_album.xml
+++ b/res/layout/activity_album.xml
@@ -7,14 +7,18 @@
             android:layout_width="wrap_content" android:layout_height="wrap_content"
             android:text="Select"
             android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
+            android:minWidth="200px" />
+    <Button android:id="@+id/btnStartSlideshow"
+            android:layout_width="wrap_content" android:layout_height="wrap_content"
+            android:text="Slideshow"
+            android:layout_alignParentBottom="true"
+            android:layout_toRightOf="@id/btnSelect"
             android:minWidth="200px" />
     <GridView xmlns:android="http://schemas.android.com/apk/res/android"
               android:id="@+id/grid_view"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:background="#000111"
-
               android:columnWidth="60dp"
               android:numColumns="auto_fit"
               android:layout_above="@id/btnSelect"
