--- a/res/layout/activity_album.xml
+++ b/res/layout/activity_album.xml
@@ -30,6 +30,13 @@
             android:layout_alignParentBottom="true"
             android:layout_toRightOf="@id/btnSelectAll"
             android:minWidth="200px" />
+    <Button android:id="@+id/btnShare"
+            android:layout_width="wrap_content" android:layout_height="wrap_content"
+            android:text="Share"
+            android:onClick="btnShareClicked"
+            android:layout_alignParentBottom="true"
+            android:layout_toRightOf="@id/btnSelectNone"
+            android:minWidth="200px" />
     <GridView xmlns:android="http://schemas.android.com/apk/res/android"
               android:id="@+id/grid_view"
               android:layout_width="fill_parent"
