--- a/res/layout/activity_albums.xml
+++ b/res/layout/activity_albums.xml
@@ -5,7 +5,9 @@
           android:layout_height="match_parent"
           android:verticalSpacing="10dp"
           android:horizontalSpacing="10dp"
-          android:numColumns="3"
+          android:columnWidth="90dp"
+          android:numColumns="auto_fit"
+          android:gravity="center"
           android:stretchMode="columnWidth"
           android:background="#330033">
 </GridView>
