--- a/res/layout/activity_album.xml
+++ b/res/layout/activity_album.xml
@@ -42,8 +42,9 @@
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:background="#000111"
-              android:columnWidth="60dp"
+              android:columnWidth="320dp"
               android:numColumns="auto_fit"
+              android:stretchMode="columnWidth"
               android:layout_above="@id/btnDelete"
     >
     </GridView>
