--- a/res/layout/activity_album.xml
+++ b/res/layout/activity_album.xml
@@ -42,7 +42,7 @@
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:background="#000111"
-              android:columnWidth="320dp"
+              android:columnWidth="@dimen/grid_column_width"
               android:numColumns="auto_fit"
               android:stretchMode="columnWidth"
               android:layout_above="@id/btnDelete"
