--- a/res/layout/activity_albums.xml
+++ b/res/layout/activity_albums.xml
@@ -5,7 +5,7 @@
           android:layout_height="match_parent"
           android:verticalSpacing="10dp"
           android:horizontalSpacing="10dp"
-          android:columnWidth="320dp"
+          android:columnWidth="@dimen/grid_column_width"
           android:numColumns="auto_fit"
           android:gravity="center"
           android:stretchMode="columnWidth"
