--- a/res/layout/album_grid_item.xml
+++ b/res/layout/album_grid_item.xml
@@ -1,37 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+             android:layout_width="fill_parent"
+             android:layout_height="fill_parent">
 
-    <asbridge.me.uk.MPhoto.Classes.SquareImageView
+    <ImageView
             android:id="@+id/grid_item_image"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="@dimen/thumb_size"
+            android:layout_height="@dimen/thumb_size"
             android:scaleType="centerCrop"
+            android:layout_gravity="center"
     />
     <Button android:id="@+id/btnSlideshow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="8dp"
-            android:layout_gravity="center_horizontal"
+            android:textSize="@dimen/albumthumb_button_text_size"
+            android:layout_gravity="bottom|center"
+            android:background="@color/albumthumb_background_color"
+            android:layout_marginBottom="24dp"
             android:text="Slideshow" />
     <Button android:id="@+id/btnAlbum"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="8dp"
+            android:textSize="@dimen/albumthumb_button_text_size"
             android:layout_gravity="center"
+            android:background="@color/albumthumb_background_color"
             android:text="Edit" />
     <TextView
             android:id="@+id/grid_item_label"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="album name"
+            android:textSize="@dimen/albumthumb_albumname_text_size"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp"
-            android:layout_gravity="bottom"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:layout_gravity="top|center"
+            android:layout_marginTop="0dp"
             android:textColor="@android:color/white"
             android:background="#55000000"
     />
