Checkbox size specified in resources Todo: different scalling for slideshow Slideshow user controls onResume/oncreate

--- a/res/layout/image_grid_item.xml
+++ b/res/layout/image_grid_item.xml
@@ -13,8 +13,10 @@
             android:scaleType="centerCrop"
     />
     <CheckBox android:id="@+id/imageCheckBox"
-              android:layout_width="@dimen/imagethumb_checkbox_size"
-              android:layout_height="@dimen/imagethumb_checkbox_size"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:scaleX="@integer/imagecheckbox_scale"
+              android:scaleY="@integer/imagecheckbox_scale"
               android:alpha="0.5"
               android:layout_gravity="center"
     />
