Now using PhotoActivity for slideshow. And touch on slideshow makes a pause Todo: Slideshow user controls Start slideshow on particular photo resume from particular photo after swipe share / delete on individual photos when swiping Album activity title onResume/oncreate

--- a/res/layout/activity_photo.xml
+++ b/res/layout/activity_photo.xml
@@ -15,11 +15,13 @@
         android:onClick="btnPhotoClicked"
     />
 
-    <Button android:id="@+id/btnControlSlideshow"
+    <Button android:id="@+id/btnPhotoStartSlideshow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:onClick="btnControlSlideshowClicked"
+            android:paddingRight="8dp"
+            android:paddingLeft="8dp"
+            android:onClick="btnPhotoStartSlideshowClicked"
             android:text="Start Slideshow"
     />
 </RelativeLayout>
