--- a/res/layout/album_grid_item.xml
+++ b/res/layout/album_grid_item.xml
@@ -15,6 +15,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/albumthumb_button_text_size"
+            android:paddingRight="8dp"
+            android:paddingLeft="8dp"
             android:layout_gravity="bottom|center"
             android:background="@color/albumthumb_background_color"
             android:layout_marginBottom="24dp"
@@ -22,6 +24,8 @@
     <Button android:id="@+id/btnAlbum"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingRight="8dp"
+            android:paddingLeft="8dp"
             android:textSize="@dimen/albumthumb_button_text_size"
             android:layout_gravity="center"
             android:background="@color/albumthumb_background_color"
