--- a/res/layout/activity_photo.xml
+++ b/res/layout/activity_photo.xml
@@ -29,13 +29,13 @@
             android:text="Delete"
             android:onClick="btnPhotoDeleteClicked"
             android:layout_alignParentBottom="true"
-            android:layout_toRightOf="@id/btnStartSlideshow"
+            android:layout_toRightOf="@id/btnPhotoStartSlideshow"
             android:minWidth="200px" />
     <Button android:id="@+id/btnShare"
             android:layout_width="wrap_content" android:layout_height="wrap_content"
             android:text="Share"
             android:onClick="btnPhotoShareClicked"
             android:layout_alignParentBottom="true"
-            android:layout_toRightOf="@id/btnSelectNone"
+            android:layout_toRightOf="@id/btnDelete"
             android:minWidth="200px" />
 </RelativeLayout>
