--- a/res/layout/activity_photo.xml
+++ b/res/layout/activity_photo.xml
@@ -24,14 +24,14 @@
             android:onClick="btnPhotoStartSlideshowClicked"
             android:text="Start Slideshow"
     />
-    <Button android:id="@+id/btnDelete"
+    <Button android:id="@+id/btnPhotoDelete"
             android:layout_width="wrap_content" android:layout_height="wrap_content"
             android:text="Delete"
             android:onClick="btnPhotoDeleteClicked"
             android:layout_alignParentBottom="true"
             android:layout_toRightOf="@id/btnPhotoStartSlideshow"
             android:minWidth="200px" />
-    <Button android:id="@+id/btnShare"
+    <Button android:id="@+id/btnPhotoShare"
             android:layout_width="wrap_content" android:layout_height="wrap_content"
             android:text="Share"
             android:onClick="btnPhotoShareClicked"
