Added option in settings to load from folders OR media TODO: Changed settings (from media and slideshow speed) not used until app restarts

--- a/res/xml/settings.xml
+++ b/res/xml/settings.xml
@@ -11,4 +11,10 @@
             android:defaultValue="3"
             android:entries="@array/slideshowSpeedKeys"
             android:entryValues="@array/slideshowSpeedValues" />
+    <CheckBoxPreference
+            android:key="fromMedia"
+            android:title="Load photos from media"
+            android:summary="Choose whether to load from media or folders"
+            android:defaultValue="false"
+    />
 </PreferenceScreen>
