Added getItemPosition (return POSITION_NONE) to PhotoPagerAdapter to allow deleting of pages

--- a/res/layout-land/activity_albums.xml
+++ b/res/layout-land/activity_albums.xml
@@ -5,7 +5,7 @@
           android:layout_height="match_parent"
           android:verticalSpacing="1dp"
           android:horizontalSpacing="1dp"
-          android:columnWidth="240dp"
+          android:columnWidth="@dimen/grid_column_width"
           android:numColumns="auto_fit"
           android:gravity="center"
           android:stretchMode="columnWidth"
