--- a/res/layout/activity_album.xml
+++ b/res/layout/activity_album.xml
@@ -39,8 +39,10 @@
             android:minWidth="200px" />
     <GridView xmlns:android="http://schemas.android.com/apk/res/android"
               android:id="@+id/grid_view"
-              android:layout_width="fill_parent"
-              android:layout_height="fill_parent"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:verticalSpacing="2dp"
+              android:horizontalSpacing="2dp"
               android:background="#000111"
               android:columnWidth="@dimen/grid_column_width"
               android:numColumns="auto_fit"
