--- a/res/layout/activity_albums.xml
+++ b/res/layout/activity_albums.xml
@@ -9,5 +9,5 @@
           android:numColumns="auto_fit"
           android:gravity="center"
           android:stretchMode="columnWidth"
-          android:background="#330033">
+          android:background="@color/albumsgrid_background_color">
 </GridView>
