--- a/res/layout/image_grid_item.xml
+++ b/res/layout/image_grid_item.xml
@@ -24,9 +24,9 @@
     <Button android:id="@+id/btnViewPhoto"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingRight="8dp"
-            android:paddingLeft="8dp"
+            android:padding="@dimen/thumb_button_padding"
             android:textSize="@dimen/albumthumb_button_text_size"
+            android:layout_marginBottom="@dimen/thumb_bottom_button_marginBottom"
             android:layout_gravity="bottom|center"
             android:background="@color/albumthumb_background_color"
             android:text="View" />
