--- a/res/values-land/guiconstants.xml
+++ b/res/values-land/guiconstants.xml
@@ -3,11 +3,14 @@
     <dimen name="albumthumb_button_text_size">32sp</dimen>
     <dimen name="albumthumb_albumname_text_size">16sp</dimen>
     <color name="albumthumb_background_color">#66666666</color>
+    <color name="albumsgrid_background_color">#99FF1111</color>
 
-    <dimen name="grid_column_width">420dp</dimen>
+    <dimen name="grid_column_width">260dp</dimen>
 
-    <dimen name="thumb_size">420dp</dimen>
+    <dimen name="thumb_size">260dp</dimen>
 
     <integer name="imagecheckbox_scale">2</integer>
 
+    <dimen name="thumb_bottom_button_marginBottom">2dp</dimen>
+    <dimen name="thumb_button_padding">2dp</dimen>
 </resources>
