--- a/res/values/guiconstants.xml
+++ b/res/values/guiconstants.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="albumthumb_button_text_size">32sp</dimen>
+    <dimen name="albumthumb_button_text_size">16sp</dimen>
     <dimen name="albumthumb_albumname_text_size">16sp</dimen>
     <color name="albumthumb_background_color">#666666FF</color>
+    <color name="albumsgrid_background_color">#9911FFFF</color>
 
-    <dimen name="grid_column_width">320dp</dimen>
+    <dimen name="grid_column_width">150dp</dimen>
 
-    <dimen name="thumb_size">320dp</dimen>
+    <dimen name="thumb_size">150dp</dimen>
 
-    <integer name="imagecheckbox_scale">2</integer>
+    <integer name="imagecheckbox_scale">1</integer>
+
+    <dimen name="thumb_bottom_button_marginBottom">2dp</dimen>
+    <dimen name="thumb_button_padding">1dp</dimen>
 
 </resources>
