--- a/res/values/settings-arrays.xml
+++ b/res/values/settings-arrays.xml
@@ -10,4 +10,12 @@
         <item>3</item>
         <item>1</item>
     </string-array>
+    <string-array name="photoDateKeys">
+        <item>Date taken</item>
+        <item>Date added</item>
+    </string-array>
+    <string-array name="photoDateValues">
+        <item>DateTaken</item>
+        <item>DateAdded</item>
+    </string-array>
 </resources>
