--- a/res/values/guiconstants.xml
+++ b/res/values/guiconstants.xml
@@ -14,4 +14,5 @@
     <dimen name="thumb_bottom_button_marginBottom">2dp</dimen>
     <dimen name="thumb_button_padding">1dp</dimen>
 
+    <dimen name="photo_button_padding">5dp</dimen>
 </resources>
