--- a/res/layout/activity_photo.xml
+++ b/res/layout/activity_photo.xml
@@ -44,7 +44,7 @@
             android:layout_width="wrap_content" android:layout_height="wrap_content"
             android:textOn="Turn shuffle off"
             android:textOff="Turn shuffle on"
-            android:disabledAlpha="1"
+            android:background="@android:drawable/btn_default"
             android:layout_alignParentBottom="true"
             android:layout_toRightOf="@id/btnPhotoShare"
             android:padding="@dimen/photo_button_padding"
