--- a/res/layout/activity_photosbydate.xml
+++ b/res/layout/activity_photosbydate.xml
@@ -30,4 +30,9 @@
             android:layout_marginBottom="36dp"
             android:layout_below="@id/btnShowAlbum"
     />
+    <android.support.v4.view.ViewPager
+            android:id="@+id/pager"
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
+            android:layout_below="@id/btnShowSlideshow"/>
 </RelativeLayout>
