--- a/res/layout/fragment_month.xml
+++ b/res/layout/fragment_month.xml
@@ -9,12 +9,12 @@
             android:layout_centerInParent="true"
             android:text="Month"
             android:textAppearance="?android:attr/textAppearanceLarge"/>
-    <Spinner android:id="@+id/spinnerMonth"
+    <Spinner android:id="@+id/spinnerMonthMonth"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_below="@id/textView"
     />
-    <NumberPicker android:id="@+id/numberpickerYear"
+    <NumberPicker android:id="@+id/numberpickerYearMonth"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_toRightOf="@id/spinnerMonth"
