--- a/res/layout/fragment_year.xml
+++ b/res/layout/fragment_year.xml
@@ -8,8 +8,8 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="Year"
-            android:textAppearance="?android:attr/textAppearanceLarge"/>
-    <NumberPicker android:id="@+id/numberpickerYear"
+            />
+    <NumberPicker android:id="@+id/numberpickerYearYear"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_below="@id/textView"
