--- a/res/layout/fragment_by_buckets.xml
+++ b/res/layout/fragment_by_buckets.xml
@@ -1,18 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:gravity="center"
+>
     <TextView
             android:id="@+id/textViewsbb"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="View photos by albums"
+            android:textSize="@dimen/tabs_text_size"
+            android:layout_centerHorizontal="true"
+            android:text="View all photos grouped into albums"
+            android:gravity="center_horizontal"
+            android:layout_marginBottom="@dimen/tabs_text_margin_bottom"
             />
     <Button android:id="@+id/btnShowByBucket"
             android:layout_width="wrap_content" android:layout_height="wrap_content"
-            android:text="Show all photos grouped by albums"
+            android:text="View albums"
             android:layout_below="@id/textViewsbb"
-            android:padding="@dimen/photo_button_padding"
-    />
+            android:layout_centerHorizontal="true"
+            android:padding="@dimen/photosbydate_button_padding"
+            android:textSize="@dimen/photosbydate_button_text_size"/>
 </RelativeLayout>
