--- a/res/values/guiconstants.xml
+++ b/res/values/guiconstants.xml
@@ -15,4 +15,13 @@
     <dimen name="thumb_button_padding">1dp</dimen>
 
     <dimen name="photo_button_padding">5dp</dimen>
+
+    <dimen name="tabs_text_size">24dp</dimen>
+
+    <dimen name="tabs_text_margin_bottom">10dp</dimen>
+
+    <dimen name="photosbydate_button_text_size">16sp</dimen>
+    <dimen name="photosbydate_button_padding">5dp</dimen>
+
+
 </resources>
