--- a/res/layout-land/fragment_given_month.xml
+++ b/res/layout-land/fragment_given_month.xml
@@ -13,20 +13,26 @@
             android:layout_marginBottom="@dimen/tabs_text_margin_bottom"
             android:gravity="center_horizontal"
     />
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/textView"
+            android:gravity="center_horizontal"
+    >
 
     <asbridge.me.uk.MPhoto.controls.MonthControl
             android:id="@+id/monthControlMonth"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
+
             android:layout_below="@+id/textView"/>
     <asbridge.me.uk.MPhoto.controls.YearControl
             android:id="@+id/yearControlMonth"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:layout_below="@id/monthControlMonth"
-            android:layout_marginTop="20dp"
+            android:layout_toRightOf="@id/monthControlMonth"
+            android:layout_marginLeft="20dp"
     />
+    </LinearLayout>
 
 </RelativeLayout>
