--- a/res/layout/fragment_all_photos.xml
+++ b/res/layout/fragment_all_photos.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:gravity="center"
+>
     <TextView
             android:id="@+id/textView"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="View all photos"
-            />
+            android:text="View all photos on the tablet"
+            android:textSize="@dimen/tabs_text_size"
+            android:gravity="center_horizontal"
+    />
 </RelativeLayout>
