--- a/res/values-sw600dp-land/guiconstants.xml
+++ b/res/values-sw600dp-land/guiconstants.xml
@@ -11,4 +11,9 @@
 
     <integer name="imagecheckbox_scale">2</integer>
 
+    <dimen name="tabs_text_size">48dp</dimen>
+    <dimen name="tabs_text_margin_bottom">20dp</dimen>
+
+    <dimen name="photosbydate_button_text_size">36sp</dimen>
+    <dimen name="photosbydate_button_padding">16dp</dimen>
 </resources>
