--- a/res/layout-sw600dp/activity_album.xml
+++ b/res/layout-sw600dp/activity_album.xml
@@ -54,7 +54,7 @@
               android:id="@+id/grid_view"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:numColumns="5"
+              android:numColumns="@integer/albumgrid_number_columns"
               android:stretchMode="columnWidth"
               android:layout_above="@id/layoutbuttons"
     >
