--- a/res/layout/image_grid_item.xml
+++ b/res/layout/image_grid_item.xml
@@ -5,11 +5,10 @@
              android:layout_height="match_parent">
 
 
-    <ImageView
+    <asbridge.me.uk.MPhoto.Classes.SquareImageView
             android:id="@+id/image_grid_item_image"
-            android:layout_gravity="center"
-            android:layout_width="@dimen/thumb_size"
-            android:layout_height="@dimen/thumb_size"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:scaleType="centerCrop"
     />
     <CheckBox android:id="@+id/imageCheckBox"
