--- a/res/values/guiconstants.xml
+++ b/res/values/guiconstants.xml
@@ -23,5 +23,7 @@
     <dimen name="photosbydate_button_text_size">16sp</dimen>
     <dimen name="photosbydate_button_padding">5dp</dimen>
 
+    <integer name="albumgrid_number_columns">2</integer>
+
 
 </resources>
