--- a/res/layout/activity_photo.xml
+++ b/res/layout/activity_photo.xml
@@ -12,7 +12,7 @@
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/photopager"
             android:layout_width="match_parent"
-            android:layout_height="fill_parent"
+            android:layout_height="match_parent"
             android:onClick="btnPhotoClicked"
     />
 <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"
