--- a/res/layout/fragment_given_year.xml
+++ b/res/layout/fragment_given_year.xml
@@ -13,7 +13,7 @@
             android:layout_marginBottom="@dimen/tabs_text_margin_bottom"
     />
 
-    <asbridge.me.uk.MPhoto.controls.YearControl
+    <asbridge.me.uk.MPhoto.controls.NumberControl
             android:id="@+id/yearControl"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
