--- a/res/layout/fragment_last_n_photos.xml
+++ b/res/layout/fragment_last_n_photos.xml
@@ -2,31 +2,22 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center"
->
+                android:gravity="center">
     <TextView
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="View all photos in selected month"
             android:textSize="@dimen/tabs_text_size"
+            android:gravity="center_horizontal"
+            android:text="View most recent photos (select number of photos to view)"
             android:layout_marginBottom="@dimen/tabs_text_margin_bottom"
-            android:gravity="center_horizontal"
     />
 
-    <asbridge.me.uk.MPhoto.controls.MonthControl
-            android:id="@+id/monthControlMonth"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:layout_below="@+id/textView"/>
     <asbridge.me.uk.MPhoto.controls.NumberControl
-            android:id="@+id/yearControlMonth"
+            android:id="@+id/ncLastNControl"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:layout_below="@id/monthControlMonth"
-            android:layout_marginTop="20dp"
+            android:layout_below="@+id/textView"
     />
-
 </RelativeLayout>
