--- a/res/values-land/guiconstants.xml
+++ b/res/values-land/guiconstants.xml
@@ -14,7 +14,8 @@
     <dimen name="thumb_bottom_button_marginBottom">2dp</dimen>
     <dimen name="thumb_button_padding">2dp</dimen>
 
-    <dimen name="tabs_text_size">24dp</dimen>
+    <dimen name="tabs_text_size">24sp</dimen>
+    <dimen name="radioOptionsTextSize">18sp</dimen>
     <dimen name="tabs_text_margin_bottom">4dp</dimen>
 
     <integer name="albumgrid_number_columns">3</integer>
