--- a/res/values-sw600dp-land/guiconstants.xml
+++ b/res/values-sw600dp-land/guiconstants.xml
@@ -11,7 +11,8 @@
 
     <integer name="imagecheckbox_scale">2</integer>
 
-    <dimen name="tabs_text_size">48dp</dimen>
+    <dimen name="tabs_text_size">48sp</dimen>
+    <dimen name="radioOptionsTextSize">32sp</dimen>
     <dimen name="tabs_text_margin_bottom">20dp</dimen>
 
     <dimen name="photosbydate_button_text_size">36sp</dimen>
