--- a/res/values/guiconstants.xml
+++ b/res/values/guiconstants.xml
@@ -16,14 +16,13 @@
 
     <dimen name="photo_button_padding">5dp</dimen>
 
-    <dimen name="tabs_text_size">24dp</dimen>
-
+    <dimen name="tabs_text_size">24sp</dimen>
+    <dimen name="radioOptionsTextSize">18sp</dimen>
     <dimen name="tabs_text_margin_bottom">10dp</dimen>
 
     <dimen name="photosbydate_button_text_size">16sp</dimen>
     <dimen name="photosbydate_button_padding">5dp</dimen>
 
     <integer name="albumgrid_number_columns">2</integer>
-
 
 </resources>
