--- a/res/layout/fragment_given_period.xml
+++ b/res/layout/fragment_given_period.xml
@@ -17,6 +17,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/textView"
             android:id="@+id/radioGroup"
+            android:layout_marginLeft="20dp"
     >
         <RadioButton
                 android:layout_width="wrap_content"
@@ -48,7 +49,7 @@
                 android:layout_height="wrap_content"
                 android:text="In Last 3 Months"
                 android:id="@+id/rbInLast3Months"
-                android:checked="false"
+                android:checked="true"
                 android:textSize="@dimen/radioOptionsTextSize"
         />
         <RadioButton
