--- a/res/layout-land/fragment_given_period.xml
+++ b/res/layout-land/fragment_given_period.xml
@@ -16,21 +16,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/textView"
-            android:id="@+id/radioGroup"
+            android:id="@+id/radioGroup1"
             android:layout_marginLeft="20dp"
     >
-    </RadioGroup>
-    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
-                  android:orientation="horizontal"
-                  android:layout_gravity="center_horizontal"
-                  android:layout_alignTop="@+id/radioGroup" android:layout_alignParentEnd="true"
-                  android:gravity="center_horizontal">
-        <LinearLayout android:layout_width="0px"
-                      android:layout_weight="1"
-                      android:layout_height="wrap_content"
-                      android:orientation="vertical"
-                      android:layout_marginRight="10dp"
-        >
     <RadioButton
             android:layout_width="wrap_content"
             android:text="In last week"
@@ -61,16 +49,18 @@
             android:layout_height="wrap_content"
             android:text="In Last 3 Months"
             android:id="@+id/rbInLast3Months"
-            android:checked="true"
+            android:checked="false"
             android:textSize="@dimen/radioOptionsTextSize"
     />
-        </LinearLayout>
-        <LinearLayout android:layout_width="0px"
-                      android:layout_weight="1"
-                      android:layout_height="wrap_content"
-                      android:orientation="vertical"
-                      android:layout_marginLeft="10dp"
-        >
+    </RadioGroup>
+    <RadioGroup
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/textView"
+            android:layout_toRightOf="@id/radioGroup1"
+            android:id="@+id/radioGroup2"
+            android:layout_marginLeft="20dp"
+    >
     <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -103,7 +93,6 @@
             android:checked="false"
             android:textSize="@dimen/radioOptionsTextSize"
     />
-    </LinearLayout>
-    </LinearLayout>
+    </RadioGroup>
 
 </RelativeLayout>
