--- a/res/layout/fragment_given_period.xml
+++ b/res/layout/fragment_given_period.xml
@@ -16,7 +16,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/textView"
-            android:id="@+id/radioGroup"
+            android:id="@+id/radioGroup1"
             android:layout_marginLeft="20dp"
     >
         <RadioButton
@@ -52,6 +52,14 @@
                 android:checked="true"
                 android:textSize="@dimen/radioOptionsTextSize"
         />
+    </RadioGroup>
+    <RadioGroup
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/radioGroup1"
+            android:id="@+id/radioGroup2"
+            android:layout_marginLeft="20dp"
+    >
         <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -60,6 +68,7 @@
                 android:checked="false"
                 android:textSize="@dimen/radioOptionsTextSize"
         />
+
         <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
