simplified photo grid item layout

--- a/res/layout-sw600dp/activity_photo.xml
+++ b/res/layout-sw600dp/activity_photo.xml
@@ -18,6 +18,7 @@
 
     <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                   android:layout_alignParentBottom="true"
+                    android:layout_marginBottom="64dp"
     >
     <Button android:id="@+id/btnPhotoStartSlideshow"
             android:layout_width="wrap_content"
